# ncnn_paddleocrv4

./: CMakeLists.txt  baseOcr.h  baseStruct.h  crnnNet.cpp  crnnNet.h  dbNet.cpp  dbNet.h  main.cpp  readme.md  tools.h
data/: ch_recv4.ncnn.param  det.param
